LM/ET - Bugfix: category dropdowns covered by other elements on ipad

--- a/app/assets/stylesheets/partials/_navbar.scss
+++ b/app/assets/stylesheets/partials/_navbar.scss
@@ -15,6 +15,7 @@ $navbar-height: $grid-unit*2;
   background-color: $blue;
   border: 0;
   margin: 0;
+  z-index: 1;
   border-radius: 0px;
   .navbar-toggle {
     z-index: 1;
